Fixing database and project version