@@ -1,5 +1,6 @@
 package fon.stefan.januarski_rok.service.impl;
 
+import fon.stefan.januarski_rok.converter.impl.AcademicTitleHistoryConverter;
 import fon.stefan.januarski_rok.domain.*;
 import fon.stefan.januarski_rok.dto.*;
 import fon.stefan.januarski_rok.repository.*;
@@ -27,44 +28,20 @@ public class AcademicTitleHistoryServiceImpl implements AcademicTitleHistoryServ
     @Override
     public List<AcademicTitleHistoryDto> getHistory(MemberDto memberDto) throws Exception {
         checkMember(memberDto);
-        Optional<List<AcademicTitleHistory>> list = academicTitleHistoryRepository.findByDepartmentIdAndMemberId(memberDto.getDepartmentId(),memberDto.getId());
+        Optional<List<AcademicTitleHistory>> list = academicTitleHistoryRepository.findByDepartmentIdAndMemberId(memberDto.getDepartment().getId(),memberDto.getId());
         if(list.isEmpty())
             throw new RuntimeException("Member entity can't receive academic title history.");
         return list.get().stream().map(AcademicTitleHistoryServiceImpl::ConvertToAcademicTitleHistoryDto).toList();
     }
 
     private static AcademicTitleHistoryDto ConvertToAcademicTitleHistoryDto(AcademicTitleHistory a) {
-        return new AcademicTitleHistoryDto(
-                new MemberDto(
-                        a.getMember().getDepartment().getId(),
-                        a.getMember().getId(),
-                        a.getMember().getFirstName(),
-                        a.getMember().getLastName(),
-                        a.getMember().getEducationTitle().getTitle(),
-                        a.getAcademicTitle().getTitle(),
-                        a.getScientificField().getName()
-                ),
-                new DepartmentDto(
-                        a.getMember().getDepartment().getId(),
-                        a.getMember().getDepartment().getName()
-                ),
-                new AcademicTitleDto(
-                        a.getAcademicTitle().getId(),
-                        a.getAcademicTitle().getTitle()
-                ),
-                new ScientificFieldDto(
-                        a.getScientificField().getId(),
-                        a.getScientificField().getName()
-                ),
-                AcademicTitleHistoryDto.toString(a.getStartDate()),
-                AcademicTitleHistoryDto.toString(a.getEndDate())
-        );
+        return new AcademicTitleHistoryConverter().toDto(a);
     }
 
     private Member checkMember(MemberDto memberDto) {
-        Optional<Member> memberSearch = memberRepository.findById(new MemberId(memberDto.getId(),new Department(memberDto.getDepartmentId())));
+        Optional<Member> memberSearch = memberRepository.findById(memberDto.getId());
         if(memberSearch.isEmpty())
-            throw new RuntimeException("Member with id "+ memberDto.getId()+" and department id "+ memberDto.getDepartmentId()+" doesn't exist.");
+            throw new RuntimeException("Member with id "+ memberDto.getId()+" and department id "+ memberDto.getDepartment().getId()+" doesn't exist.");
         return memberSearch.get();
     }
 
@@ -76,10 +53,10 @@ public class AcademicTitleHistoryServiceImpl implements AcademicTitleHistoryServ
 
     @Override
     public List<AcademicTitleHistoryDto> addHistory(List<AcademicTitleHistoryDto> history) throws Exception {
-        MemberDto memberDto = history.getFirst().getMemberDto();
+        MemberDto memberDto = history.get(0).getMemberDto();
         Member member = checkMember(memberDto);
         academicTitleHistoryRepository.saveAll(member.getAcademicTitles());
-        Optional<List<AcademicTitleHistory>> list = academicTitleHistoryRepository.findByDepartmentIdAndMemberId(memberDto.getDepartmentId(),memberDto.getId());
+        Optional<List<AcademicTitleHistory>> list = academicTitleHistoryRepository.findByDepartmentIdAndMemberId(memberDto.getDepartment().getId(),memberDto.getId());
         if(list.isEmpty())
             throw new RuntimeException("Member with id "+ memberDto.getId()+" in departemnt "+member.getDepartment().getId()+" doesn't exist");
 
@@ -88,12 +65,10 @@ public class AcademicTitleHistoryServiceImpl implements AcademicTitleHistoryServ
 
     @Override
     public List<AcademicTitleHistoryDto> addAcademicTitle(AcademicTitleHistoryDto academicTitleHistoryDto) throws Exception {
-        Optional<Department> department = departmentRepository.findById(academicTitleHistoryDto.getDepartmentDto().getId());
-        if(department.isEmpty())
-            throw new RuntimeException("Department with id "+academicTitleHistoryDto.getDepartmentDto().getId()+" doesn't exist");
-        Optional<Member> member = memberRepository.findById(new MemberId(academicTitleHistoryDto.getMemberDto().getId(),department.get()));
+
+        Optional<Member> member = memberRepository.findById(academicTitleHistoryDto.getMemberDto().getId());
         if(member.isEmpty())
-            throw new RuntimeException("Member with id "+academicTitleHistoryDto.getMemberDto().getId()+" in department with id "+academicTitleHistoryDto.getDepartmentDto().getId()+" doesn't exist");
+            throw new RuntimeException("Member with id "+academicTitleHistoryDto.getMemberDto().getId()+" doesn't exist");
         Optional<AcademicTitle> academicTitle = academicTitleRepository.findById(academicTitleHistoryDto.getAcademicTitleDto().getId());
         if(academicTitle.isEmpty())
             throw new RuntimeException("Academic title with id "+academicTitleHistoryDto.getAcademicTitleDto().getId()+" doesn't exist.");
@@ -111,9 +86,10 @@ public class AcademicTitleHistoryServiceImpl implements AcademicTitleHistoryServ
         if(academicTitleHistoryRepository.existsById(new AcademicTitleHistoryId(academicTitleHistory.getMember(),academicTitleHistory.getAcademicTitle())))
             throw new RuntimeException("Entity is already created.");
         academicTitleHistoryRepository.save(academicTitleHistory);
-        Optional<List<AcademicTitleHistory>> list = academicTitleHistoryRepository.findByDepartmentIdAndMemberId(academicTitleHistoryDto.getDepartmentDto().getId(),academicTitleHistoryDto.getMemberDto().getId());
-        if(list.isEmpty())
-            throw new RuntimeException("Member and department don't exist");
-        return list.get().stream().map(AcademicTitleHistoryServiceImpl::ConvertToAcademicTitleHistoryDto).toList();
+//        Optional<List<AcademicTitleHistory>> list = academicTitleHistoryRepository.findByDepartmentIdAndMemberId(academicTitleHistoryDto.getDepartmentDto().getId(),academicTitleHistoryDto.getMemberDto().getId());
+//        if(list.isEmpty())
+//            throw new RuntimeException("Member and department don't exist");
+//        return list.get().stream().map(AcademicTitleHistoryServiceImpl::ConvertToAcademicTitleHistoryDto).toList();
+        return null;
     }
 }
