@@ -1,11 +1,13 @@
 package fon.stefan.januarski_rok.service.impl;
 
+import fon.stefan.januarski_rok.converter.impl.DepartmentSecretaryConverter;
 import fon.stefan.januarski_rok.domain.Department;
 import fon.stefan.januarski_rok.domain.DepartmentSecretary;
 import fon.stefan.januarski_rok.domain.DepartmentSecretaryId;
 import fon.stefan.januarski_rok.domain.Member;
 import fon.stefan.januarski_rok.dto.DepartmentDto;
 import fon.stefan.januarski_rok.dto.DepartmentSecretaryDto;
+import fon.stefan.januarski_rok.dto.MemberDto;
 import fon.stefan.januarski_rok.repository.DepartmentRepository;
 import fon.stefan.januarski_rok.repository.DepartmentSecretaryRepository;
 import fon.stefan.januarski_rok.service.DepartmentSecretaryService;
@@ -25,16 +27,12 @@ public class DepartmentSecretaryServiceImpl implements DepartmentSecretaryServic
     }
     @Override
     public List<DepartmentSecretaryDto> getAllDepartmentSecretaries() {
-        return departmentSecretaryRepository.findAll().stream().map(
-                departmentSecretary -> new DepartmentSecretaryDto(
-                        new DepartmentDto(
-                                departmentSecretary.getMember().getDepartment().getId(),
-                                departmentSecretary.getMember().getDepartment().getName()),departmentSecretary.getId(),departmentSecretary.getMember().getFirstName(),departmentSecretary.getMember().getLastName(),departmentSecretary.getMember().getEducationTitle().getTitle())).toList();
+        return departmentSecretaryRepository.findAll().stream().map(departmentSecretary -> new DepartmentSecretaryConverter().toDto(departmentSecretary)).toList();
     }
 
     @Override
     public DepartmentSecretaryDto deleteDepartmentSecretary(DepartmentSecretaryDto departmentSecretary) throws Exception {
-        Optional<DepartmentSecretary> departmentSecretarySearch = departmentSecretaryRepository.findById(new DepartmentSecretaryId(departmentSecretary.getMemberId(),new Member(departmentSecretary.getDepartmentDto().getId(),departmentSecretary.getMemberId())));
+        Optional<DepartmentSecretary> departmentSecretarySearch = departmentSecretaryRepository.findById(new DepartmentSecretaryId(departmentSecretary.getId(),new Member(departmentSecretary.getMemberDto().getId()),new Department(departmentSecretary.getDepartmentDto().getId())));
         if(departmentSecretarySearch.isEmpty())
             throw new RuntimeException("Department secretary doesn't exist.");
         DepartmentSecretary result = departmentSecretarySearch.get();
@@ -49,9 +47,8 @@ public class DepartmentSecretaryServiceImpl implements DepartmentSecretaryServic
             throw new RuntimeException("Department doesn't have secretary list");
         if(departmentSecretaryList.get().isEmpty())
             throw new RuntimeException("Department secretary list is empty");
-        DepartmentSecretary current = departmentSecretaryList.get().getLast();
-        Department department = current.getMember().getDepartment();
-        return new DepartmentSecretaryDto(new DepartmentDto(department.getId(),department.getName()),current.getMember().getId(),current.getId(),current.getMember().getFirstName(),current.getMember().getLastName(),current.getMember().getEducationTitle().getTitle());
+        DepartmentSecretary current = departmentSecretaryList.get().get(departmentSecretaryList.get().size()-1);
+        return new DepartmentSecretaryConverter().toDto(current);
     }
 
     private Optional<List<DepartmentSecretary>> getDepartmentSecretariesByDepartment(DepartmentDto departmentDto) {
@@ -72,17 +69,15 @@ public class DepartmentSecretaryServiceImpl implements DepartmentSecretaryServic
             throw new RuntimeException("Department secretary list doesn't exist.");
         if(departmentSecretarySearch.get().isEmpty())
             throw new RuntimeException("Department secretary list is empty.");
-        return departmentSecretarySearch.get().stream().map(d->new DepartmentSecretaryDto(new DepartmentDto(d.getMember().getDepartment().getId(),d.getMember().getDepartment().getName()),d.getMember().getId(),d.getMember().getFirstName(),d.getMember().getLastName(),d.getMember().getEducationTitle().getTitle())).toList();
+        return departmentSecretarySearch.get().stream().map(d->new DepartmentSecretaryConverter().toDto(d)).toList();
     }
 
     @Override
     public DepartmentSecretaryDto createDepartmentSecretary(DepartmentSecretaryDto departmentSecretaryDto) throws Exception {
-        Optional<DepartmentSecretary> departmentSecretarySearch = departmentSecretaryRepository.findById(new DepartmentSecretaryId(departmentSecretaryDto.getMemberId(),new Member(departmentSecretaryDto.getDepartmentDto().getId(),departmentSecretaryDto.getMemberId())));
+        Optional<DepartmentSecretary> departmentSecretarySearch = departmentSecretaryRepository.findById(new DepartmentSecretaryId(departmentSecretaryDto.getId(),new Member(departmentSecretaryDto.getMemberDto().getId()),new Department(departmentSecretaryDto.getDepartmentDto().getId())));
         if(departmentSecretarySearch.isPresent())
             throw new RuntimeException("Department secretary already exist.");
-        DepartmentSecretary departmentSecretary = departmentSecretaryRepository.save(new DepartmentSecretary(departmentSecretaryDto.getId(),departmentSecretaryDto.getDepartmentDto().getId(),departmentSecretaryDto.getMemberId()));
-        Department department = departmentSecretary.getMember().getDepartment();
-
-        return new DepartmentSecretaryDto(new DepartmentDto(department.getId(),department.getName()),departmentSecretary.getMember().getId(),departmentSecretary.getMember().getFirstName(),departmentSecretary.getMember().getLastName(),departmentSecretary.getMember().getEducationTitle().getTitle());
+        DepartmentSecretary departmentSecretary = departmentSecretaryRepository.save(new DepartmentSecretaryConverter().toEntity(departmentSecretaryDto));
+        return new DepartmentSecretaryConverter().toDto(departmentSecretary);
     }
 }
